# OpenGL-GameEngine

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/base_shader/: color.frag  color2.frag  quad.vert  shapes.frag
assets/shaders/light/: light_array.frag  light_common.glsl
source/common/: application.cpp
source/components/: camera.h  camera_controller.h  camera_freelook_controller.h  collider.h  i_component.hpp  light.h  meshRenderer.h  meshRenderer.hpp  renderer.cpp  renderer.hpp  transform.cpp  transform.hpp  velocity.h
source/core/: application.cpp  application.hpp  game.cpp  resources.cpp  scene.hpp
source/core/camera/: camera.hpp
source/core/camera/controllers/: fly_camera_controller.hpp  orbit_camera_controller.hpp
source/core/game_states/: i_game_state.hpp  test2.cpp  test2.hpp  test_state.cpp  test_state.hpp
source/core/game_states/state_manager/: state_manager.cpp  state_manager.hpp
source/entity/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
source/events/: event.cpp  event.h  event_manager.h
source/graphics/: shader.cpp  shader.hpp
source/graphics/material/: material.cpp  material.h
source/graphics/mesh/: common-vertex-attributes.hpp  common-vertex-types.hpp  mesh-utils.cpp  mesh-utils.hpp  mesh.cpp  mesh.hpp  vertex-attributes.hpp
source/graphics/render_state/: RenderState.cpp  RenderState.h
source/graphics/sampler/: sampler.cpp  sampler.h
source/graphics/shader/: shader.cpp  shader.hpp
source/graphics/texture/: texture.cpp  texture.h
source/input/: keyboard.hpp  mouse.hpp
source/lib/: base_shader.cpp
source/mesh/: mesh.hpp
source/system/: camera_system.cpp  camera_system.h  renderSystem.cpp  renderSystem.h  render_system.cpp  render_system.h
source/system/camera_system/: camera_system.cpp  camera_system.h
source/system/collision_system/: collision_system.cpp  collision_system.h
source/system/gui_system/: gui_system.cpp  gui_system.h
source/system/movement_system/: movement_system.cpp  movement_system.h
source/system/render_system/: render_system.cpp  render_system.h
source/utils/: data-types.h  enums.h
source/utils/screenshot/: screenshot.cpp  screenshot.h
